# template_demo

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
crates/: Cargo.toml
crates/src/basic_functions/: basic_math.rs  mod.rs
src/notebooks/: 01_main.ipynb
src/template_demo/: __init__.py  main.py
src/tests/: electron_test.py
