[build-system]
requires = ["setuptools", "wheel", "setuptools_rust"]
build-backend = "setuptools.build_meta"

[project]
name = "template_demo"
description = "null"
version = "0.1.0"
authors = [{ name = "Evan McKinney" }]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "matplotlib",
    "LovelyPlots",
    # "qiskit",
    # "qutip",
    # "weylchamber",
]

[project.optional-dependencies]
dev = ["ipykernel", "pre-commit", "pylatexenc"]
format = [
    "pre-commit",
    "black[jupyter]",
    "isort",
    "tomli",
    "ruff",
    "docformatter[tomli]",
]
test = ["pytest"]

[tool.ruff]
target-version = "py39"
fix = true
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.isort]
profile = "black"

[[tool.setuptools-rust.ext-modules]]
# Private Rust extension module to be nested into the Python package
# https://github.com/PyO3/setuptools-rust?tab=readme-ov-file
target = "template_demo._accelerate"
path = "crates/Cargo.toml"
binding = "PyO3"

[tool.distutils.bdist_wheel]
py_limited_api = "cp39"
